Change the app name to Parity

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">ReactNativeDefensePairing</string>
+    <string name="app_name">Parity</string>
 </resources>
